--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
+
+    <div class="header">
+        
+    </div>
     
 </body>
 </html>
